<resources>
    <string name="app_name">DietPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="activity2">Activity 2</string>
    <string name="title_activity_calc">Расчеты</string>
    <string name="label_age">Ваш возраст</string>
    <string name="label_weight">Ваш вес</string>
    <string name="label_height">Ваш рост в см</string>
    <string name="btnCalc">Рассчитать</string>
    <string name="menu_calc">Расчеты</string>
    <string name="menu_diet">Диеты</string>
    <string name="menu_product">Продукты</string>
    <string name="menu_share">Рассказать</string>
    <string name="menu_send">Отправить</string>
    <string name="menu_title_send">Поделиться</string>
    <string name="title_activity_diet">Диеты</string>
    <string name="title_activity_product">Продукты</string>
    <string name="title_activity_calc_details">Детали диеты</string>
    <string name="acceptDiet">Сесть на диету</string>
    <string name="title_activity_product_details">Описание продукта</string>
    <string name="titlePFC">Пищевая ценность:</string>
    <string name="proteinTitle">Белки</string>
    <string name="fatTitle">Жиры</string>
    <string name="carbohydrateTitle">Углеводы</string>
    <string name="gr">гр.</string>
    <string name="menu_my">Мои данные</string>
    <string name="title_activity_my_data">Мои данные</string>
    <string name="labelName">Имя</string>
    <string name="btnSave">Сохранить</string>
    <string name="labelTastePreferences">Вкусовые предпочтения</string>
    <string name="label_sex_male">Мужской</string>
    <string name="label_sex_female">Женский</string>
    <string name="label_body_type_ect">Эктоморф</string>
    <string name="label_body_type_mezo">Мезоморф</string>
    <string name="label_body_type_endo">Эндоморф</string>
    <string name="labelRadioGroupSex">Пол</string>
    <string name="labelRadioGroupBodyType">Тип телосложения</string>
    <string name="title_activity_my_diary">Моя диета</string>
    <string name="headerDay">Сегодня %1$s %2$d-й день</string>
    <string name="ingestionComplete">Выполнено</string>
    <string name="menu_my_diary">Моя диета</string>
    <string name="amoutKkalItem">%.2f гр.</string>
    <string name="productComplete">Скушано</string>
    <string name="amountKkal">%d ккал</string>
    <string name="templatePFC">%.2f гр.</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="sort_ab">Сортировка</string>
    <string name="textViewProductSub">%.2f калл.</string>
    <string name="image_product">Image product</string>
    <string name="productDescription"><![CDATA[
    <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</strong></p>
    <br></br>
    <p>Praesent in mauris pharetra, molestie augue eu, accumsan urna. In quis porttitor metus.
    Quisque a orci mattis, blandit nisi id, facilisis mi. Fusce ullamcorper leo at magna lacinia rutrum. Nam semper vehicula tristique.
    Proin et suscipit libero. Maecenas scelerisque gravida tortor.</p>
    ]]></string>
    <string name="PFCnorm">Ваша дневная норма калорий: %.0f ккал.</string>
    <string name="IMT">Индекс массы тела = %.2f.</string>
    <string name="IMTlower">Индекс ниже нормы.</string>
    <string name="IMTnorm">Индекс в норме.</string>
    <string name="IMTupper">Индекс выше нормы.</string>
    <string name="labelLoseWeight">Похудение</string>
    <string name="labelUpWeight">Набор массы</string>
    <string name="labelIMT">Индекс массы тела</string>
    <string name="author">development by Vasilev A.</string>
    <string name="generate_diet">Подобрать</string>
    <string name="infoDiet">"%1$d дней.
        %2$.1f кг."</string>
    <string name="headerDayCallories">Итого калорий: %1$d/%2$d.</string>
    <string name="errorMessage">Ошибка. Попробуйте снова.</string>
    <string name="canceled">Отменено.</string>
    <string name="listProductsNotFound">Список продуктов не найден.</string>
    <string name="errorDB">Нет подключения к БД</string>
    <string name="beginDiet">Начало диеты.</string>
    <string name="endDiet">Конец диеты.</string>
    <string name="errorDontAcceptDiet">Вы не выбрали диету.</string>
    <string name="listDietsNotFound">Диеты не найдены.</string>
    <string name="productCalories">%d калл.</string>
    <string name="lengthDiet">Подолжительность %d дней.</string>
    <string name="errorDontAcceptSex">Не выбран пол.</string>
    <string name="errorDontAcceptBodyType">Не выбран тип телосложения.</string>
    <string name="successSaveData">Данные сохранены.</string>
    <string name="productsNotFound">Продукт не найден.</string>
    <string name="timeForEat">Пора кушать.</string>
    <string name="tikerText">Тикер текст</string>
    <string name="notificationTitle">DietPro Notification</string>
    <string name="notificationText">%1$s в %2$s. Не забудьте поесть.</string>
    <string name="time">Время %s</string>

</resources>
