<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my"
            android:onClick="showMyData"/>
        <item
            android:id="@+id/nav_my_diary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_diary"
            android:onClick="showMyDiary"/>
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_calc"
            android:onClick="showCalc"/>
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_diet"
            android:onClick="showDiet"/>
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/menu_title_send">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
