<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anton.dietpro.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <Button
        android:text="@string/menu_diet"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:onClick="showDiet"
        android:id="@+id/button_diet" />

    <Button
        android:text="@string/menu_calc"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/button_diet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:onClick="showCalc"
        android:id="@+id/button_calc" />

    <Button
        android:text="@string/menu_product"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button_diet"
        android:layout_alignLeft="@+id/button_diet"
        android:layout_alignStart="@+id/button_diet"
        android:layout_marginTop="70dp"
        android:id="@+id/button4" />


    <Button
        android:text="@string/menu_share"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button_calc"
        android:layout_alignLeft="@+id/button_calc"
        android:layout_alignStart="@+id/button_calc"
        android:layout_marginTop="70dp"
        android:id="@+id/button_info" />

</RelativeLayout>
